chore: refactoring and adding sorting feature to List

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Os melhores games livres para serem jogados"
+      content="The best free games to be played"
     />
 
     <title>React App</title>
